# django-template

./: .env.example  .gitignore  pyproject.toml
config/: settings.py
